Working version of SentimentClassificationTwitterCNN. cleaned up. More clean up required.